# csci344

./: README.md  index.html  input.css  output.css  package-lock.json  package.json  styles.css
homework/hw02/: index.html  styles.css
homework/hw03/: index.html
homework/hw03/js/: main.js
homework/hw03/public/: output.css
homework/hw04/src/: index.jsx
homework/hw05/views/: bookmarks.py  post_likes.py  posts.py  profile.py  stories.py
homework/hw06/: app.py
homework/hw06/templates/: login.html
homework/hw06/views/: authentication.py  bookmarks.py  post_likes.py  posts.py  profile.py  stories.py  token.py
lectures/intro-to-react/: index.html
lectures/intro-to-react/src/: App.jsx  Profile.jsx  Welcome.css  Welcome.jsx
lectures/lecture04/: index.html
lectures/lecture06/intro-css-gallery/: styles.css
lectures/lecture07/01-media-query/: style.css
lectures/lecture13/: 00-example-callback-functions.js  02-map-demo.js  03-filter-demo.js
lectures/lecture19/: in_class_challenges.py
lectures/orm-introduction/: .env  tester.py
quizzes/quiz01/: index.html  styles.css
quizzes/quiz02a/task01/: main.js  (+1 more)
static/: style.css
tutorials/tutorial01/: index.html  music.html  style.css  videos.html
tutorials/tutorial03/: index.html  tailwind.config.js
tutorials/tutorial04/: main.js
tutorials/tutorial06/: course-data.js  main.js
tutorials/tutorial09/: app.py  pyproject.toml
tutorials/tutorial09/static/: style.css
tutorials/tutorial09/templates/: quote-of-the-day.html  restaurant.html
tutorials/tutorial10/: answers.sql  short-answer-questions.md
(+61 files in other folders)
